Commit message for changes in Color-Palette-Generator submodule

--- a/paletteGenerator.html
+++ b/paletteGenerator.html
@@ -11,7 +11,6 @@
             font-family: 'Inter', sans-serif;
             background: linear-gradient(to right, #CB1E7D, #F4CEA4); /* Warm gradient background */
             min-height: 100vh;
-            display: flex;
             align-items: center;
             justify-content: center;
             padding: 1rem;
@@ -45,6 +44,18 @@
             <span class="block sm:inline" id="messageBoxContent"></span>
         </div>
     </div>
+
+    <footer class="bg-slate-100 dark:bg-slate-900/50">
+        <div class="container mx-auto px-6 py-8 text-center text-gray-950">
+             <div class="flex justify-center space-x-4 mb-4">
+                <a href="https://github.com" target="_blank" class="hover:text-indigo-600 dark:hover:text-indigo-400"><i data-feather="github" class="w-6 h-6"></i></a>
+                <a href="https://linkedin.com" target="_blank" class="hover:text-indigo-600 dark:hover:text-indigo-400"><i data-feather="linkedin" class="w-6 h-6"></i></a>
+                <a href="https://twitter.com" target="_blank" class="hover:text-indigo-600 dark:hover:text-indigo-400"><i data-feather="twitter" class="w-6 h-6"></i></a>
+            </div>
+            <p>&copy; <span id="year"></span> Navya Gupta. All Rights Reserved.</p>
+        </div>
+    </footer>
+
   <script>
         // Get references to DOM elements
         const generatePaletteBtn = document.getElementById('generatePaletteBtn');
